--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vault6-poc",
   "private": true,
   "version": "0.1.0",
+  "license": "MIT",
   "workspaces": [
     "apps/*",
     "packages/*"
