--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,6 +15,8 @@ jobs:
   package:
     name: Package (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
+    env:
+      CSC_IDENTITY_AUTO_DISCOVERY: "false"
     strategy:
       fail-fast: false
       matrix:
