--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -16,11 +16,12 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "electron": "^37.4.0",
+    "electron": "37.10.3",
     "electron-vite": "^4.0.0"
   },
   "build": {
     "appId": "com.vault6.app",
+    "electronVersion": "37.10.3",
     "files": [
       "dist/**/*",
       "package.json"
