--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -30,10 +30,14 @@
       "output": "release"
     },
     "mac": {
-      "target": ["dmg"]
+      "target": [
+        "dmg"
+      ]
     },
     "win": {
-      "target": ["nsis"]
+      "target": [
+        "nsis"
+      ]
     }
   }
 }
